--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
       </div>
       <div class="right-section">
         <div class="headphone-div">
-          <img src="./images/discount.svg" alt="discount" class="discount" />
-          <div class="discount-content">
-            <h4>Discount</h4>
-            <h1>50%</h1>
+          <div>
+            <img src="./images/discount.svg" alt="discount" class="discount" />  
+            <div class="discount-content">
+              <h4>Discount</h4>
+              <h1>50%</h1>
+            </div>
           </div>
           <img src="./images/headphones.jpg" alt="headphone" />
         </div>
